<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>symbolthree.oracle.excel</groupId>
  <artifactId>exzellenz</artifactId>
  <version>2.1</version>
  <name>EXZELLENZ</name>
  <description>[!CDATA [
  Java application to upload data from Excel to Oracle database / 
  download data to Excel from Oracle.]]
  </description>
  
  <properties>
	  <maven.build.timestamp.format>yyyy-MM-dd HH.mm.ss</maven.build.timestamp.format>
	  <build.timestamp>${maven.build.timestamp}</build.timestamp>   
	  <maven.test.failure.ignore>true</maven.test.failure.ignore>
 
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <poi.version>5.2.3</poi.version>
  </properties>

<!--
  <distributionManagement>
	<repository>
		<id>release</id>
		<name>libs-releases</name>
		<url>http://artifactory.symbolthree.com:8082/artifactory/libs-snapshot-local</url>
	</repository>
	<snapshotRepository>
		<id>snapshots</id>
		<name>libs-snapshots</name>
		<url>http://artifactory.cibcdevops.com:8082/artifactory/libs-snapshot-local</url>
	</snapshotRepository>
	</distributionManagement>
	<scm>
	  <developerConnection>scm:git:https://gitlab.symbolthree.com/HOC/exzellenz.git</developerConnection>
	</scm>
-->	
  <dependencies>
    <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>${poi.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${poi.version}</version>
    </dependency>
    <dependency>
        <groupId>commons-i18n</groupId>
        <artifactId>commons-i18n</artifactId>
        <version>0.5</version>
    </dependency>
    <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.11.0</version>
    </dependency>
    <dependency>
        <groupId>org.jdom</groupId>
        <artifactId>jdom2</artifactId>
        <version>2.0.6.1</version>
    </dependency>
    <dependency>
        <groupId>jaxen</groupId>
        <artifactId>jaxen</artifactId>
        <version>1.2.0</version>
    </dependency>
    <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>2.18.0</version>
    </dependency>
    <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>2.18.0</version>
    </dependency>    
    <dependency>
      <groupId>com.oracle.database.jdbc</groupId>
      <artifactId>ojdbc8</artifactId>
      <version>21.7.0.0</version>
    </dependency>
    <dependency>
      <groupId>oracle.apps</groupId>
      <artifactId>fndext</artifactId>
      <version>120.9</version>
    </dependency>

  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>src\main\java\symbolthree\oracle\excel</directory>
        <includes>
          <include>EXZ_STRING.xml</include>
          <include>exzellenz_icon.gif</include>
          <include>banner.txt</include>
        </includes>
        <targetPath>/symbolthree/oracle/excel</targetPath>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <excludes>
            <exclude>**/*Test*.*</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>            	
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.1.0</version>
          <executions>
              <execution>
                  <id>zip-artifacts</id>
                  <phase>package</phase>
                  <goals>
                      <goal>run</goal>
                  </goals>
            <configuration>
              <target>
                <property name="build.version" value="${project.version}"/>
                <ant antfile="${basedir}/build.xml">
                  <target name="cleanup"/>
                </ant>
              </target>
            </configuration>
              </execution>
          </executions>
      </plugin>
    </plugins>
  </build>
</project>